Implement observation-optimization loop with some place-holder in optimizer